# comm

./: .gitignore  BUILD  CMakeLists.txt  binstring.h  bitrange.h  commassert.cpp  commassert.h  commtypes.h  dir.cpp  dir.h  dirgcc.cpp  dirwin.cpp  dynarray.h  function.h  global.h  interface.cpp  interface.h  lexer.h  meson.build  net.cpp  process.h  pthreadx.cpp  range.h  ref_i.h  ref_s.h  singleton.h  taskmaster.cpp  taskmaster.h  timer.cpp  token.h  trait.h
_build/msvc/2019/: comm_static.vcxproj  comm_static.vcxproj.filters
alloc/: _malloc.c  slotalloc.h  slotalloc_bmp.cpp  slotalloc_bmp.h
atomic/: atomic.h  basic_pool.h  stack_base.h
binstream/: filestream.h
comm_test/: main.cpp
intergen/: CMakeLists.txt  intergen.cpp  meson.build
intergen/metagen/: interface.h.mtg
log/: logger.cpp  logger.h
metastream/: fmtstream_lua_capi.h
stacktrace/: stacktrace_win.cpp
sync/: _mutex.h  condition_variable.cpp  mutex.h
